@@ -22,7 +22,7 @@
               android:label="@string/app_name"
               android:theme="@style/SBTheme"
               android:configChanges="orientation|keyboardHidden">
-      <!-- Tell NativeActivity the name of or .so -->
+      <!-- Tell NativeActivity the name of our .so -->
       <meta-data android:name="android.app.lib_name"
                  android:value="smallbasic" />
       <intent-filter>
