@@ -1,4 +1,7 @@
-2016-10-087 (0.12.8)
+2016-10-12 (0.12.8)
+	Added android speak API
+
+2016-10-08 (0.12.8)
 	Fix web server file handling in windows version
 
 2016-10-07 (0.12.8)
